update itdogtics info

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
           </li>
+          <li><a href="#itdogtics" class="nav-link scrollto"><i class="bx bx-heart"></i> <span>Personal Brand</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
         </ul>
@@ -111,8 +112,6 @@
           <div class="col-lg-4" data-aos="fade-right">
             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
               data-src="assets/img/profile-img.jpg" class="img-fluid lazy-load" alt="" loading="lazy">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-              data-src="assets/img/itdog.png" class="img-fluid lazy-load" alt="" loading="lazy">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -793,7 +792,7 @@
                 <p class="card-text">
                   Expense Tracker for personal finance. Using Flutter and Google Cloud API.
                 </p>
-                <a href="https://expense.itdogtic.com/" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://expense.itdogtics.com/" class="btn btn-custom-green" target="_blank">Page</a>
                 <a href="https://github.com/jeff214103/expense-tracker" class="btn btn-custom-green"
                   target="_blank">Github</a>
               </div>
@@ -811,7 +810,7 @@
                   post or any other purpose. Generate resume based on the input information by simply copying the job
                   ads.
                 </p>
-                <a href="https://resume.itdogtic.com" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://resume.itdogtics.com" class="btn btn-custom-green" target="_blank">Page</a>
                 <a href="https://github.com/jeff214103/resume-generator/" class="btn btn-custom-green"
                   target="_blank">Github</a>
               </div>
@@ -1503,6 +1502,36 @@
 
       </div>
     </section>
+
+    <!-- ======= ITDogtics Section ======= -->
+    <section id="itdogtics" class="itdogtics" data-aos="fade-up">
+      <div class="container">
+        <div class="section-title text-center">
+          <h2>ITDogtics</h2>
+          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+               data-src="assets/img/itdog.png" class="d-block mx-auto img-fluid lazy-load" alt="IT Dog Logo" loading="lazy" style="max-width: 300px;">
+        </div>
+        <div class="content" data-aos="fade-up" data-aos-delay="100">
+          <p>
+            ITDogtics is my personal brand—a blend of IT passion and robotics innovation. Inspired by the loyal, friendly spirit of the "IT Dog." In this space, I share tech trends, open-source projects, and insights on tackling daily boring challenges.
+          </p>
+          <ul class="list-unstyled itdogtics-services">
+            <li><i class="bi bi-check-circle"></i> Free and Open Source Software Tools</li>
+            <li><i class="bi bi-check-circle"></i> Engaging Tech Trend Discussions</li>
+            <li><i class="bi bi-check-circle"></i> Simplified Tech Basics Explanations</li>
+            <li><i class="bi bi-check-circle"></i> In-Depth Technical Problem Solving</li>
+          </ul>
+          <p>
+            Discover more at <a href="https://itdogtics.com" target="_blank">itdogtics.com</a> or catch the latest updates on the 
+            <a href="https://blog.itdogtics.com" target="_blank">ITDogtics Blog</a>.
+          </p>
+          <div class="text-center" data-aos="fade-up" data-aos-delay="200">
+            <a href="https://itdogtics.com" target="_blank" class="btn btn-custom-green">Explore ITDogtics</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End ITDogtics Section -->
     <!-- <section id="dream" class="dream">
       <div class="container">
         <div class="section-title">
@@ -1538,7 +1567,7 @@
                 <h5 class="card-title">Apple</h5>
                 <p align="justify" class="card-text">
                   Being the pioneer of mobile devices, Apple has a worldwide impact on how people use technology. My
-                  core value is in sync with theirs, which is to protect one’s privacy. I hope I could work at Apple,
+                  core value is in sync with theirs, which is to protect one's privacy. I hope I could work at Apple,
                   whose products are well-engineered, especially in the US headquarters.
                 </p>
               </div>
@@ -1551,7 +1580,7 @@
               <div class="card-body">
                 <h5 class="card-title">Robotics Company in Japan</h5>
                 <p align="justify" class="card-text">
-                  Impressed by Gundam and Japan’s railway system, and also through the exchange in ABU Robocon 2019, I
+                  Impressed by Gundam and Japan's railway system, and also through the exchange in ABU Robocon 2019, I
                   appreciate how Japan treats engineering and robotics, in which they work diligently and meticulously.
                   I hope I can set new trends in robotics while upholding their virtues.
                 </p>
