--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vancouver, BC, Canada</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Valid Work Visa:</strong> <span>Hong Kong, Canada,
                       British</span>
@@ -1504,7 +1504,7 @@
     </section>
 
     <!-- ======= ITDogtics Section ======= -->
-    <section id="itdogtics" class="itdogtics" data-aos="fade-up">
+    <section id="itdogtics" class="itdogtics">
       <div class="container">
         <div class="section-title text-center">
           <h2>ITDogtics</h2>
@@ -1525,7 +1525,7 @@
             Discover more at <a href="https://itdogtics.com" target="_blank">itdogtics.com</a> or catch the latest updates on the 
             <a href="https://blog.itdogtics.com" target="_blank">ITDogtics Blog</a>.
           </p>
-          <div class="text-center" data-aos="fade-up" data-aos-delay="200">
+          <div class="text-center">
             <a href="https://itdogtics.com" target="_blank" class="btn btn-custom-green">Explore ITDogtics</a>
           </div>
         </div>
