--- a/index.html
+++ b/index.html
@@ -1521,12 +1521,14 @@
             <li><i class="bi bi-check-circle"></i> Simplified Tech Basics Explanations</li>
             <li><i class="bi bi-check-circle"></i> In-Depth Technical Problem Solving</li>
           </ul>
-          <p>
-            Discover more at <a href="https://itdogtics.com" target="_blank">itdogtics.com</a> or catch the latest updates on the 
-            <a href="https://blog.itdogtics.com" target="_blank">ITDogtics Blog</a>.
-          </p>
           <div class="text-center">
             <a href="https://itdogtics.com" target="_blank" class="btn btn-custom-green">Explore ITDogtics</a>
+          </div>
+        </div>
+        <div class="content" data-aos="fade-up" data-aos-delay="200">
+          <div id="blog-previews" class="mt-3"></div>
+          <div class="text-center">
+            <a href="https://blog.itdogtics.com" target="_blank" class="btn btn-custom-green">Read More Blogs</a>
           </div>
         </div>
       </div>
