--- a/index.html
+++ b/index.html
@@ -178,6 +178,20 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
+            <h3 class="resume-title">Summary</h3>
+            <div class="resume-item pb-0">
+              <h4>Chun Ting Jeff Lam</h4>
+              <p><em>Software Engineer</em></p>
+              <ul>
+                <li>Start coding at age 10 with Lego NXT (15 + years)</li>
+                <li>Python3, C++, are the most familiar programming languages </li>
+                <li>Full stack development experience, utilizing AI tools for rapid development</li>
+                <li>Experience in research, development, and startup</li>
+                <li>Highest Education Master of Science in Big Data Technology</li>
+                <li>Problem solving, self-learning and communication mindset</li>
+                <li>Hate to be asked something that do not have variation</li>
+              </ul>
+            </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <a href="https://seng.hkust.edu.hk/academics/taught-postgraduate/msc-bdt">
@@ -744,7 +758,7 @@
             </tr>
             <tr>
               <th scope="row">Programming Language</th>
-              <td>Python, C++, Dart, NodeJS, Javascript, C, C#, PHP, Java</td>
+              <td>Python, C++, Dart, NodeJS, Javascript, Go, C, C#, PHP, Java</td>
 
             </tr>
             <tr>
@@ -752,11 +766,12 @@
               <td> Robotic and Embedded System (Arduino, Linux, Jetson Nano, ROS)<br>
                 IoT (MQTT, Mosquitto)<br>
                 Computer Vision (OpenCV)<br>
-                API (gRPC, RESTFUL)<br>
-                Backend (Flask, Express, SQL, MongoDB)<br>
+                API (gRPC, RESTFUL, Websocket)<br>
+                Backend (Flask, Express, GIN)<br>
+                Database (SQL, MongoDB, Redis)<br>
                 Mobile App Development (Flutter)<br>
-                Web Application (Bootstrap)<br>
-                Cloud Related (AWS, Azure, GCP, Spark, Hadoop)<br>
+                Web Application (Bootstrap, Angular)<br>
+                Cloud Related (AWS, GCP, Azure, Spark, Hadoop)<br>
                 Game Development (Unity, Unreal Engine)<br>
                 Machine Learning (Pytorch, TensorFlow)<br>
                 Parallel Computing (CUDA, SIMD)<br>
