--- a/index.html
+++ b/index.html
@@ -1531,7 +1531,7 @@
             ITDogtics is my personal brand—a blend of IT passion and robotics innovation. Inspired by the loyal, friendly spirit of the "IT Dog." In this space, I share tech trends, open-source projects, and insights on tackling daily boring challenges.
           </p>
           <ul class="list-unstyled itdogtics-services">
-            <li><i class="bi bi-check-circle"></i> Free and Open Source Software Tools</li>
+            <li><i class="bi bi-check-circle"></i> Building Software Tools for Daily Life</li>
             <li><i class="bi bi-check-circle"></i> Engaging Tech Trend Discussions</li>
             <li><i class="bi bi-check-circle"></i> Simplified Tech Basics Explanations</li>
             <li><i class="bi bi-check-circle"></i> In-Depth Technical Problem Solving</li>
