--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </p>
             <p>
               Eager to learn and make breakthroughs, I have been making progress in fields of computer science,
-              particularly in distributed system, big data and embedded software. Skilled in C/C++/Python, and
+              particularly in distributed system, big data and embedded software. Skilled in C++/Python/Go, and
               interested
               in robotics, medical, and green technology fields.
             </p>
