--- a/index.html
+++ b/index.html
@@ -801,6 +801,22 @@
             <div class="card h-100">
               <img class="card-img-top"
                 src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                data-src="assets/img/hangout.png" alt="Hangout" loading="lazy">
+              <div class="card-body">
+                <h5 class="card-title">Hangout</h5>
+                <p class="card-text">
+                  Hangout app when you do not know where to go and what to do. Suggest schedule for you using Gemini.  Built with Flutter and Firebase.
+                </p>
+                <a href="https://hangout.itdogtics.com/" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://github.com/jeff214103/hangout" class="btn btn-custom-green"
+                  target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card h-100">
+              <img class="card-img-top"
+                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                 data-src="assets/img/expense tracker.PNG" alt="Resume Generator" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">Expense Tracker</h5>
@@ -831,22 +847,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="card h-100">
-              <img class="card-img-top"
-                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-                data-src="assets/img/indoor-service-robot.jpg" alt="Indoor service robot" loading="lazy">
-              <div class="card-body">
-                <h5 class="card-title">Indoor Service Robot</h5>
-                <p class="card-text">
-                  Introducing the State-of-the-Art indoor
-                  service robot, for creating a futuristic workplace, achieving home automation, and paving the way to
-                  Smart Cities.
-                </p>
-                <a href="assets/file/HKCLR/Demo.pdf" class="btn btn-custom-green" target="_blank">Demo</a>
-              </div>
-            </div>
-          </div>
+         
 
         </div>
         <div class="d-flex justify-content-center mb-4">
@@ -857,6 +858,22 @@
         </div>
         <div class="collapse" id="collapseProjectList">
           <div class="row mb-4">
+            <div class="col-lg-4 mt-4">
+              <div class="card h-100">
+                <img class="card-img-top"
+                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                  data-src="assets/img/indoor-service-robot.jpg" alt="Indoor service robot" loading="lazy">
+                <div class="card-body">
+                  <h5 class="card-title">Indoor Service Robot</h5>
+                  <p class="card-text">
+                    Introducing the State-of-the-Art indoor
+                    service robot, for creating a futuristic workplace, achieving home automation, and paving the way to
+                    Smart Cities.
+                  </p>
+                  <a href="assets/file/HKCLR/Demo.pdf" class="btn btn-custom-green" target="_blank">Demo</a>
+                </div>
+              </div>
+            </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top"
@@ -1256,6 +1273,12 @@
           <div class="row" data-aos="fade-up">
             <div>
               <ul class="timeline">
+                <li> <b>Generate Volunteer - <a href="https://www.modev.com/generate/vancouver" target="_blank">Modev</a></b>
+                  <b class="float-end date"> 2025</b>
+                  </li>
+                <li> <b>AI Hackerthon by AI Startup Hub - AI Tools/ Tech Support Team Lead</b>
+                  <b class="float-end date"> 2025</b>
+                  </li>
                 <li><b>Google Cloud Technical Series - <a
                       href="https://www.credential.net/23bafa80-23e1-4594-9180-4459943f9e6a#acc.aHAk8BtI"
                       target="_blank">Credential</a></b>
