--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
           </li>
-          <li><a href="#itdogtics" class="nav-link scrollto"><i class="bx bx-heart"></i> <span>Personal Brand</span></a></li>
+          <li><a href="#itdogtics" class="nav-link scrollto"><i class="bx bx-heart"></i> <span>Personal Brand</span></a>
+          </li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
         </ul>
@@ -564,81 +565,123 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Working Experience</h3>
             <div class="resume-item">
-              <h4>Prompt Engineer</h4>
-              <h5>Jan 2025 - Present</h5>
-              <p><em><a href="https://zerionsoftware.com/" target="_blank">ZERION</a>, US (Remote)</em></p>
-              <ul>
+              <h4>Software Engineer II - IoT</h4>
+              <h5>Jun 2025 - Present</h5>
+              <p><em><a href="https://rivian.com/en-GB" target="_blank">Rivian and VW Group Technology</a>,
+                  Vancouver, Canada</em></p>
+              <!-- <ul>
                 <li>Developed and refined prompts for various LLMs, significantly improving the quality, accuracy, and
                   efficiency of text outputs by achieving over 90% consistency. Focus was on code generation.</li>
                 <li>Implemented advanced prompt engineering techniques, including one-shot prompting, few-shot learning,
                   chain-of-thought prompting, and prompt decomposition, to enhance LLM performance.</li>
                 <li>Reduced the need for post-processing and manual intervention, increasing the efficiency and
                   scalability for the zero-knowledge user using LLM-based systems.</li>
-              </ul>
+              </ul> -->
               <span aria-hidden="true"><strong>
                   <!---->Skills：
                   <!---->
                 </strong>
-                <!---->Prompt Engineering · LLM · Code Generation
+                <!---->Python · Rust · CICD · AWS
                 <!---->
               </span>
             </div>
             <div class="resume-item">
+              <h4>Prompt Engineer</h4>
+              <h5>Jan 2025 - Aug 2025</h5>
+              <p><em><a href="https://zerionsoftware.com/" target="_blank">ZERION</a>, US (Remote)</em></p>
+              <button class="btn btn-link btn-sm p-0 mb-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#zerion-job-details" aria-expanded="false" aria-controls="zerion-job-details">
+                <i class="bi bi-chevron-down"></i> View Responsibilities
+              </button>
+              <div class="collapse" id="zerion-job-details">
+                <ul>
+                  <li>Developed and refined prompts for various LLMs, significantly improving the quality, accuracy, and
+                    efficiency of text outputs by achieving over 90% consistency. Focus was on code generation.</li>
+                  <li>Implemented advanced prompt engineering techniques, including one-shot prompting, few-shot
+                    learning,
+                    chain-of-thought prompting, and prompt decomposition, to enhance LLM performance.</li>
+                  <li>Reduced the need for post-processing and manual intervention, increasing the efficiency and
+                    scalability for the zero-knowledge user using LLM-based systems.</li>
+                </ul><span aria-hidden="true"><strong>
+                    <!---->Skills：
+                    <!---->
+                  </strong>
+                  <!---->Prompt Engineering · LLM · Code Generation
+                  <!---->
+                </span>
+              </div>
+
+            </div>
+            <div class="resume-item">
               <h4>Software Engineer</h4>
-              <h5>Jul 2022 - Aug 2024 -> Present</h5>
+              <h5>Jul 2022 - Aug 2024 -> Oct 2024 - Jul 2025</h5>
               <p><em><a href="https://flyfarm.com/" target="_blank">FLYFARM</a>, Hong
                   Kong -> Canada</em></p>
-              <ul>
-                <li>Analyzed competitors and stack-holders needs for cost effective and user-friendly the software
-                  system.
-                </li>
-                <li>Developed and maintained a remote monitoring system for the IoT agri-tech company, using Python and
-                  NodeJS
-                  along with GCP, AWS, MongoDB Atlas technology</li>
-                <li>Collaborated with Mechatronic Team for building a real-time machinery and robotics control system
-                  through
-                  network protocol like MQTT, Restful, socket, and even wired communication such as RS485, I2C using C++
-                </li>
-                <li>Conducted unit testing and integration testing to ensure software quality and reliability.</li>
-              </ul>
-              <span aria-hidden="true"><strong>
-                  <!---->Skills：
+              <button class="btn btn-link btn-sm p-0 mb-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flyfarm-job-details" aria-expanded="false" aria-controls="flyfarm-job-details">
+                <i class="bi bi-chevron-down"></i> View Responsibilities
+              </button>
+              <div class="collapse" id="flyfarm-job-details">
+                <ul>
+                  <li>Analyzed competitors and stack-holders needs for cost effective and user-friendly the software
+                    system.
+                  </li>
+                  <li>Developed and maintained a remote monitoring system for the IoT agri-tech company, using Python
+                    and
+                    NodeJS
+                    along with GCP, AWS, MongoDB Atlas technology</li>
+                  <li>Collaborated with Mechatronic Team for building a real-time machinery and robotics control system
+                    through
+                    network protocol like MQTT, Restful, socket, and even wired communication such as RS485, I2C using
+                    C++
+                  </li>
+                  <li>Conducted unit testing and integration testing to ensure software quality and reliability.</li>
+                </ul> <span aria-hidden="true"><strong>
+                    <!---->Skills：
+                    <!---->
+                  </strong>
+                  <!---->Google Cloud Platform (GCP) · Mqtt ·
+                  MongoDB · Node.js · Amazon Web Services (AWS) · Python · Flutter · C++
                   <!---->
-                </strong>
-                <!---->Google Cloud Platform (GCP) · Mqtt ·
-                MongoDB · Node.js · Amazon Web Services (AWS) · Python · Flutter · C++
-                <!---->
-              </span>
+                </span>
+              </div>
+
             </div>
             <div class="resume-item">
               <h4>Assistant Engineer</h4>
               <h5>Aug 2020 - Jul 2022</h5>
               <p><em><a href="http://www.hkclr.hk/#" target="_blank">Hong Kong Center For Logistic Robotics</a>, Hong
                   Kong</em></p>
-              <ul>
-                <li>Responsible for InnoHK pioneering research clusters robotics project.</li>
-                <li>Collaborated with PhD candidates, and researched in AI technology for an unmannered robot-human
-                  interaction
-                  system using ROS, pytorch, tensorflow, and OpenCV.</li>
-                <li>Developed and maintained full-stack application connecting robot to AWS and Alicloud through gRPC
-                  and REST</li>
-                <li>Implemented front-end application with web technologies HTML, CSS, JS and mobile Flutter.</li>
-                <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot
-                    project</a>, <a href="assets/file/HKCLR/Demo.pdf" target="_blank">ppt
-                  </a>, <a href="https://www.youtube.com/watch?v=sR-7Ncvzov8&ab_channel=%E6%9E%97%E6%8C%AF%E9%9C%86"
-                    target="_blank">Demo Video
-                  </a></li>
-              </ul>
-              <span aria-hidden="true"><strong>
-                  <!---->Skills：
+              <button class="btn btn-link btn-sm p-0 mb-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#hkclr-job-details" aria-expanded="false" aria-controls="hkclr-job-details">
+                <i class="bi bi-chevron-down"></i> View Responsibilities
+              </button>
+              <div class="collapse" id="hkclr-job-details">
+                <ul>
+                  <li>Responsible for InnoHK pioneering research clusters robotics project.</li>
+                  <li>Collaborated with PhD candidates, and researched in AI technology for an unmannered robot-human
+                    interaction
+                    system using ROS, pytorch, tensorflow, and OpenCV.</li>
+                  <li>Developed and maintained full-stack application connecting robot to AWS and Alicloud through gRPC
+                    and REST</li>
+                  <li>Implemented front-end application with web technologies HTML, CSS, JS and mobile Flutter.</li>
+                  <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot
+                      project</a>, <a href="assets/file/HKCLR/Demo.pdf" target="_blank">ppt
+                    </a>, <a href="https://www.youtube.com/watch?v=sR-7Ncvzov8&ab_channel=%E6%9E%97%E6%8C%AF%E9%9C%86"
+                      target="_blank">Demo Video
+                    </a></li>
+                </ul><span aria-hidden="true"><strong>
+                    <!---->Skills：
+                    <!---->
+                  </strong>
+                  <!---->OpenCV · TensorFlow · Robot
+                  Operating
+                  System (ROS) · Amazon Web Services (AWS) · Alibaba Cloud · Python · Flutter · gRPC · SQL ·
+                  C++
                   <!---->
-                </strong>
-                <!---->OpenCV · TensorFlow · Robot
-                Operating
-                System (ROS) · Amazon Web Services (AWS) · Alibaba Cloud · Python · Flutter · gRPC · SQL ·
-                C++
-                <!---->
-              </span>
+                </span>
+              </div>
+
             </div>
             <div class="resume-item">
               <h4>Software Engineer (Student Helper)</h4>
@@ -646,31 +689,46 @@
               <p><em><a href="https://hseo.hkust.edu.hk/" target="_blank">The Hong Kong University of Science and
                     Technology (HSEO)</a>,
                   Hong Kong</em></p>
-              <ul>
-                <li>Constructed a SQL database to record various departmental and experimental data for staff members.
-                </li>
-                <li>Designed a user-friendly web interface with PHP to streamline data input and enhance data retrieval
-                  security.</li>
-              </ul>
-              <span aria-hidden="true"><strong>
-                  <!---->Skills：
+              <button class="btn btn-link btn-sm p-0 mb-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#hkust-hseo-job-details" aria-expanded="false" aria-controls="hkust-hseo-job-details">
+                <i class="bi bi-chevron-down"></i> View Responsibilities
+              </button>
+              <div class="collapse" id="hkust-hseo-job-details">
+                <ul>
+                  <li>Constructed a SQL database to record various departmental and experimental data for staff members.
+                  </li>
+                  <li>Designed a user-friendly web interface with PHP to streamline data input and enhance data
+                    retrieval
+                    security.</li>
+                </ul> <span aria-hidden="true"><strong>
+                    <!---->Skills：
+                    <!---->
+                  </strong>
+                  <!---->HTML · CSS · JavaScript
+                  PHP · SQL
                   <!---->
-                </strong>
-                <!---->HTML · CSS · JavaScript
-                PHP · SQL
-                <!---->
-              </span>
+                </span>
+              </div>
+
             </div>
             <div class="resume-item">
               <h4>Technician</h4>
               <h5>Jun 2015 - Aug 2015</h5>
               <p><em><a href="http://roctec.com.hk/" target="_blank">Roctec Technology Limited</a>, Hong Kong</em></p>
-              <ul>
-                <li>Conducted thorough testing of newly developed multimedia software to ensure error-free performance.
-                </li>
-                <li>Investigated the usage of a newly developed machine and compared its performance and reliability to
-                  the old method.</li>
-              </ul>
+              <button class="btn btn-link btn-sm p-0 mb-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#roctec-job-details" aria-expanded="false" aria-controls="roctec-job-details">
+                <i class="bi bi-chevron-down"></i> View Responsibilities
+              </button>
+              <div class="collapse" id="roctec-job-details">
+                <ul>
+                  <li>Conducted thorough testing of newly developed multimedia software to ensure error-free
+                    performance.
+                  </li>
+                  <li>Investigated the usage of a newly developed machine and compared its performance and reliability
+                    to
+                    the old method.</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -805,11 +863,11 @@
               <div class="card-body">
                 <h5 class="card-title">Hangout</h5>
                 <p class="card-text">
-                  Hangout app when you do not know where to go and what to do. Suggest schedule for you using Gemini.  Built with Flutter and Firebase.
+                  Hangout app when you do not know where to go and what to do. Suggest schedule for you using Gemini.
+                  Built with Flutter and Firebase.
                 </p>
                 <a href="https://hangout.itdogtics.com/" class="btn btn-custom-green" target="_blank">Page</a>
-                <a href="https://github.com/jeff214103/hangout" class="btn btn-custom-green"
-                  target="_blank">Github</a>
+                <a href="https://github.com/jeff214103/hangout" class="btn btn-custom-green" target="_blank">Github</a>
               </div>
             </div>
           </div>
@@ -847,7 +905,7 @@
               </div>
             </div>
           </div>
-         
+
 
         </div>
         <div class="d-flex justify-content-center mb-4">
@@ -1273,12 +1331,13 @@
           <div class="row" data-aos="fade-up">
             <div>
               <ul class="timeline">
-                <li> <b>Generate Volunteer - <a href="https://www.modev.com/generate/vancouver" target="_blank">Modev</a></b>
+                <li> <b>Generate Volunteer - <a href="https://www.modev.com/generate/vancouver"
+                      target="_blank">Modev</a></b>
                   <b class="float-end date"> 2025</b>
-                  </li>
+                </li>
                 <li> <b>AI Hackerthon by AI Startup Hub - AI Tools/ Tech Support Team Lead</b>
                   <b class="float-end date"> 2025</b>
-                  </li>
+                </li>
                 <li><b>Google Cloud Technical Series - <a
                       href="https://www.credential.net/23bafa80-23e1-4594-9180-4459943f9e6a#acc.aHAk8BtI"
                       target="_blank">Credential</a></b>
@@ -1547,11 +1606,14 @@
         <div class="section-title text-center">
           <h2>ITDogtics</h2>
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-               data-src="assets/img/itdog.png" class="d-block mx-auto img-fluid lazy-load" alt="IT Dog Logo" loading="lazy" style="max-width: 300px;">
+            data-src="assets/img/itdog.png" class="d-block mx-auto img-fluid lazy-load" alt="IT Dog Logo" loading="lazy"
+            style="max-width: 300px;">
         </div>
         <div class="content" data-aos="fade-up" data-aos-delay="100">
           <p>
-            ITDogtics is my personal brand—a blend of IT passion and robotics innovation. Inspired by the loyal, friendly spirit of the "IT Dog." In this space, I share tech trends, open-source projects, and insights on tackling daily boring challenges.
+            ITDogtics is my personal brand—a blend of IT passion and robotics innovation. Inspired by the loyal,
+            friendly spirit of the "IT Dog." In this space, I share tech trends, open-source projects, and insights on
+            tackling daily boring challenges.
           </p>
           <ul class="list-unstyled itdogtics-services">
             <li><i class="bi bi-check-circle"></i> Building Software Tools for Daily Life</li>
